[package]
authors = ["Martin Amps <https://twitter.com/martinamps>"]
name = "starter-snake-rust"
version = "1.0.0"
edition = "2018"

homepage = "https://play.battlesnake.com"
repository = "https://github.com/BattlesnakeOfficial/starter-snake-rust/"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
rand = { version = "0.8.4", features = ["small_rng"] }
serde_json = "1.0"
serde = { version = "1.0.159", features = ["derive"] }
rouille = "3.6.2"

[profile.release]
opt-level = "z" 
lto = true
strip = true 
